--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "build": "rollup -c",
     "watch": "rollup -cw",
     "prepare": "rollup -c",
-    "test": "mocha './tests/**/*.spec.js' --compilers js:babel-core/register"
+    "test": "jest tests"
   },
   "repository": {
     "type": "git",
@@ -34,27 +34,25 @@
   "homepage": "https://github.com/zcreativelabs/react-simple-maps#readme",
   "devDependencies": {
     "babel-core": "^6.26.0",
-    "babel-preset-env": "^1.7.0",
     "babel-plugin-external-helpers": "^6.22.0",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-plugin-transform-react-jsx": "^6.24.1",
+    "babel-preset-env": "^1.7.0",
     "babelrc-rollup": "^3.0.0",
+    "jest-cli": "^29.0.3",
+    "prop-types": "^15.7.2",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
     "rollup": "^1.17.0",
     "rollup-plugin-babel": "^3.0.3",
     "rollup-plugin-commonjs": "^10.0.1",
     "rollup-plugin-node-resolve": "^5.2.0",
-    "rollup-plugin-terser": "^5.1.1",
-    "expect": "^23.5.0",
-    "mocha": "^5.2.0",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "prop-types": "^15.7.2",
-    "react-test-utils": "^0.0.1"
+    "rollup-plugin-terser": "^5.1.1"
   },
   "peerDependencies": {
+    "prop-types": "^15.7.2",
     "react": "^16.8.0 || 17.x",
     "react-dom": "^16.8.0 || 17.x",
-    "prop-types": "^15.7.2",
     "react-native-svg": "^12.1.0"
   },
   "dependencies": {
